Fix all projects radio, fix same task showing multiple times

--- a/Capstone/Style/Dashboard.css
+++ b/Capstone/Style/Dashboard.css
@@ -16,6 +16,8 @@ button{
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 #TasksSection td, th {
