--- a/Capstone/Views/Dashboard/Index.cshtml
+++ b/Capstone/Views/Dashboard/Index.cshtml
@@ -40,7 +40,7 @@
         <form id="projectselection" class="text-center">
             <span class="padding-5px">
                 <label class="radio-inline">
-                    <input type="radio" name="optradio" checked>All
+                    <input type="radio" name="optradio" value="_all" checked>All
                 </label>
 
                 @foreach (var project in Model.Projects) {
@@ -284,7 +284,7 @@
         $('input[name=optradio]').on('click', function () {
             var radioValue = $("input[name='optradio']:checked").val();
 
-            return $.ajax({
+            $.ajax({
                 type: "post",
                 url: '@Url.Action("UpdateProject", "Dashboard")',
                 dataType: "html",
@@ -293,11 +293,11 @@
                     sUser: "@Model.CurrentUser.Username"
                 },
                 success: function(data){
-                    $('#tasktable > tbody:last tr').html(data);
+                    $('#tasktable tbody:last').html(data);
                 },
 
                 error: function () {
-                    alert(radioValue);
+                    alert("There was an issue with updating the table");
                 }
             });
         });
