--- a/Capstone/Views/Dashboard/Index.cshtml
+++ b/Capstone/Views/Dashboard/Index.cshtml
@@ -56,50 +56,56 @@
 
     <div id="TasksSection">
         <label>Tasks</label>
-        <table id="tasktable" class="table table-hover">
-            <tr>
-                <th scope="col">Task</th>
-                <th scope="col">Priority</th>
-                <th scope="col">Due Date</th>
-                <th scope="col">Status</th>
-                <th scope="col">Project</th>
-            </tr>
-            <tbody>
-               
-                    @foreach (var project in Model.Projects) {
-                        foreach (var task in project.Tasks) {
-                             <tr>
+        <div class="scrollable-task">
+            <table id="tasktable" class="table table-hover">
+                <tr>
+                    <th scope="col">Task</th>
+                    <th scope="col">Priority</th>
+                    <th scope="col">Due Date</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Project</th>
+                </tr>
+                <tbody>
+
+                    @foreach (var project in Model.Projects)
+                    {
+                        foreach (var task in project.Tasks)
+                        {
+                            <tr>
                                 <td>@task.Title</td>
                                 <td>@task.Priority</td>
                                 <td>@task.DueDate.ToString("MM/dd/yyyy")</td>
                                 <td>@task.Status</td>
                                 <td>@project.Title</td>
-                             </tr>
+                            </tr>
                         }
                     }
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div id="TaskOverviewSection">
         <img src="https://www.patternfly.org/pattern-library/data-visualization/pie-chart/img/right-legend-pie-chart.png" />
     </div>
     <div id="PersonalNotesSection">
-            <div id="PersonalNotesTable">
+            <div>
                 <label>Personal Notes</label>
-                <table class="table table-hover">
-                    <tr>
-                        <th>Date</th>
-                        <th>Note</th>
-                    </tr>
-                    @foreach (var note in Model.CurrentUser.PersonalNotes)
-                    {
-                        <tr id="@note.PersonalNoteId" name="PersonalNoteRow">
-                            <td>@note.TimeStamp.ToString("MM/dd/yyyy")</td>
-                            <td>@note.Information</td>
+                <div class="scrollable-notes" id="PersonalNotesTable">
+                    <table class="table table-hover">
+                        <tr>
+                            <th>Date</th>
+                            <th>Note</th>
                         </tr>
-                    }
-                </table>
+                        @foreach (var note in Model.CurrentUser.PersonalNotes)
+                        {
+                            <tr id="@note.PersonalNoteId" name="PersonalNoteRow">
+                                <td>@note.TimeStamp.ToString("MM/dd/yyyy")</td>
+                                <td>@note.Information</td>
+                            </tr>
+                        }
+                    </table>
+                </div>
             </div>
 
             <textarea id="PersonalNoteText"></textarea><br />
