--- a/Capstone/Views/Home/Index.cshtml
+++ b/Capstone/Views/Home/Index.cshtml
@@ -20,8 +20,8 @@
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that masdasdasdasdasdakes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="@Url.Action("Index", "Dashboard")"> DASHBOARD &raquo;</a></p>
+        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
