--- a/WhiteBears/Content/Site.css
+++ b/WhiteBears/Content/Site.css
@@ -7,6 +7,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    height: 100%;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
