Add table, button, and jquery code

--- a/WhiteBears/Content/bootstrap.css
+++ b/WhiteBears/Content/bootstrap.css
@@ -7146,3 +7146,15 @@ td.visible-print {
         transition: none;
     }
 }
+
+.float-left {
+    float: left !important
+}
+
+.float-right {
+    float: right !important
+}
+
+.float-none {
+    float: none !important
+}
