--- a/WhiteBears/Views/Home/Index.cshtml
+++ b/WhiteBears/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="login-grid-left">
            
             <div class="loginform-full-width">
-                @using (Html.BeginForm("Home", "Index", FormMethod.Post))
+                @using (Html.BeginForm("Index", "Home", FormMethod.Post))
                 {
                     <mat-form-field>
                         <mat-label class="login-label">Username:</mat-label>
